feat: update dependencies and add type definitions for new packages
- Added bcrypt, cloudinary, cookie-parser, cors, jsonwebtoken, mongoose-aggregate-paginate-v2, and multer to dependencies.
- Updated devDependencies to include type definitions for bcrypt, cookie-parser, cors, jsonwebtoken, mongoose, mongoose-aggregate-paginate-v2, and multer.

Signed-off-by: TBS96 <9tbs6@proton.me>

--- a/package.json
+++ b/package.json
@@ -11,15 +11,29 @@
     "type-watch": "tsc --noEmit -w"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.9"
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.97",
+    "@types/mongoose-aggregate-paginate-v2": "^1.1.2",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^25.0.10"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "express": "^5.2.1",
-    "mongoose": "^9.1.5"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.5",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
+    "multer": "^2.0.2"
   }
 }
